Шеринг: Функционал реализован
