# internal/rest/boardshr/coauthors_get.go
@@ -5,27 +5,28 @@ import (
 	"net/http"
 	"strconv"
 
-	"github.com/go-park-mail-ru/2025_1_SuperChips/domain"
 	"github.com/go-park-mail-ru/2025_1_SuperChips/internal/rest"
 	auth "github.com/go-park-mail-ru/2025_1_SuperChips/internal/rest/auth"
 	"github.com/go-park-mail-ru/2025_1_SuperChips/internal/validator"
 )
 
-// GetInvitationLinks godoc
-//	@Summary		Get invitation links to the board
-//	@Description	Get invitation links to the board with ID with parameters for authenticated user who is author
-//	@Tags			boards invitations
+// GetCoauthors godoc
+//	@Summary		Get coauthors
+//	@Description	Get coauthors of the board (user must be author of the board)
+//	@Tags			Board sharing [author]
 //	@Produce		json
 //	@Security		jwt_auth
-//	@Param			board_id	path		int										true	"ID of the board"
-//	@Success		200			{object}	ServerResponse{data=domain.LinkParams}	"Array of links with parameters"
-//	@Failure		400			{object}	ServerResponse							"Invalid request parameters"
-//	@Failure		401			{object}	ServerResponse							"Unauthorized"
-//	@Failure		403			{object}	ServerResponse							"Forbidden - access denied"
-//	@Failure		404			{object}	ServerResponse							"Board not found"
-//	@Failure		500			{object}	ServerResponse							"Internal server error"
-//	@Router			/api/v1/boards/{id}/invitations [get]
-func (b *BoardInvHandler) GetInvitationLinks(w http.ResponseWriter, r *http.Request) {
+//
+//	@Param			board_id	path		int								true	"ID of the board"
+//
+//	@Success		200			{object}	ServerResponse{data=[]string}	"The list of coauthors has been successfully received"
+//	@Failure		400			{object}	ServerResponse					"Invalid request parameters"
+//	@Failure		401			{object}	ServerResponse					"Unauthorized"
+//	@Failure		403			{object}	ServerResponse					"Forbidden - access denied"
+//	@Failure		500			{object}	ServerResponse					"Internal server error"
+//
+//	@Router			/api/v1/boards/{board_id}/coauthors [get]
+func (b *BoardShrHandler) GetCoauthors(w http.ResponseWriter, r *http.Request) {
 	boardIDStr := r.PathValue("board_id")
 	boardID, err := strconv.Atoi(boardIDStr)
 	if err != nil {
@@ -47,19 +48,19 @@ func (b *BoardInvHandler) GetInvitationLinks(w http.ResponseWriter, r *http.Requ
 		return
 	}
 
-	links, err := b.BoardInvService.GetInvitationLinks(ctx, boardID, userID)
+	names, err := b.BoardShrService.GetCoauthors(ctx, boardID, userID)
 	if err != nil {
-		handleBoardInvError(w, err)
+		handleBoardShrError(w, err)
 		return
 	}
 
 	type DataReturn struct {
-		Links []domain.LinkParams `json:"links"`
+		Names []string `json:"names"`
 	}
 
 	resp := rest.ServerResponse{
 		Description: "OK",
-		Data:        DataReturn{Links: links},
+		Data:        DataReturn{Names: names},
 	}
 
 	rest.ServerGenerateJSONResponse(w, resp, http.StatusOK)
